--- a/index.html
+++ b/index.html
@@ -9,19 +9,68 @@
 <body>
     <div class="layout">
         <div class="nav-bar">
-            <div class="logo-background">
-                <img class="logo-img" src="images/odin-lined.png" />
-                <span class="logo-name">Odin</span>
+            <div class="nav-body">
+                <div class="logo-background">
+                    <img class="logo-img" src="images/odin-lined.png" />
+                    <span class="logo-name">Odin</span>
+                </div>
             </div>
             <div class="credit">Photo by Halie West on Unsplash</div>
         </div>
         <div class="main-body">
             <div class="main-header">
-                This is not a real online service! You know you need something like this in your life to help you release your deepest dreams. Sign up now to get started.<br><br>
-                You <em>know</em> you want to.
+                <div class="main-header-top"></div>
+                <div class="header-message">
+                    <p>This is not a real online service! You know you need something like this in your life to help you release your deepest dreams.<br>
+                    Sign up <em>now</em> to get started.</p>
+                    <p>You <em>know</em> you want to.</p>
+                </div>
             </div>
-            <div class="main-form">FORM HERE</div>
-            <div class="main-footer">BUTTON HERE</div>
+            <div class="main-form">
+                <form>
+                    <p>Let's do this!</p>
+                    <div class="form-row">
+                        <div class="field">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" name="first_name"/>
+                            <span></span>
+                        </div>
+                            <div class="field">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name" name="last_name"/>
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="field">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email"/>
+                            <span></span>
+                        </div>           
+                        <div class="field">       
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="tel" id="phone" name="phone"/>
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="field">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password"/>
+                            <span></span>
+                        </div>
+                        <div class="field">
+                            <label for="conf_password">CONFIRM PASSWORD</label>
+                            <input type="password" id="conf_password" name="conf_password"/>
+                            <span></span>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="main-footer">
+                <button>Create Account</button>
+                <p>Already have an account? <a href="#">Login</a></p>
+            </div>
         </div>
 </div>
 </body>
