Removed default values from mandatory fields put there for testing purposes

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                     <div class="form-row">
                         <div class="field">
                             <label for="first_name">FIRST NAME</label>
-                            <input type="text" id="first_name" name="first_name" value="Testy" required/>
+                            <input type="text" id="first_name" name="first_name" required/>
                             <span id="err_first_name">REQUIRED</span>
                         </div>
                             <div class="field">
                             <label for="last_name">LAST NAME</label>
-                            <input type="text" id="last_name" name="last_name" value="Kel" required/>
+                            <input type="text" id="last_name" name="last_name" required/>
                             <span id="err_last_name">REQUIRED</span>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="field">
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" value="test@test.com" required/>
+                            <input type="email" id="email" name="email" required/>
                             <span id="err_email">REQUIRED</span>
                         </div>           
                         <div class="field">       
