--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="form-row">
                         <div class="field">
                             <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" required/>
+                            <input type="text" id="email" name="email"/>
                             <span id="err_email">REQUIRED</span>
                         </div>           
                         <div class="field">       
@@ -56,14 +56,14 @@
                     </div>
                     <div class="form-row">
                         <div class="field">
-                            <label for="password">PASSWORD (REQUIRED)</label>
+                            <label for="password">PASSWORD</label>
                             <input type="password" id="password" name="password"/>
                             <span id="err_pwd">REQUIRED</span>
                         </div>
                         <div class="field">
-                            <label for="conf_password">CONFIRM PASSWORD (REQUIRED)</label>
+                            <label for="conf_password">CONFIRM PASSWORD</label>
                             <input type="password" id="conf_password" name="conf_password"/>
-                            <span id="err_pwd_conf"></span>
+                            <span id="err_pwd_conf">REQUIRED</span>
                         </div>
                     </div>
                 </form>
